added login and data.sql

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,5 @@ message.login.forgotPassword = Forgot password?
 message.login.signIn = Sign in
 message.login.rememberMe = Remember me
 message.login.signUp = New here? Sign up instead!
+message.login.badCredentials= Username and/or password is incorrect!
+message.login.passwordConfirm = Confirm password
