--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,3 +9,4 @@ message.login.haveAccount = Already have an account? Sign in!
 message.login.badCredentials= Username and/or password is incorrect!
 message.login.passwordConfirm = Confirm password
 message.login.username = username
+message.comment.description = Comment
