--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,3 +10,15 @@ message.login.badCredentials= Username and/or password is incorrect!
 message.login.passwordConfirm = Confirm password
 message.login.username = username
 message.comment.description = Comment
+
+message.home.newPost = new post
+message.home.posts = POSTS
+message.home.followers = FOLLOWERS
+message.home.following = FOLLOWING
+message.home.logout = logout
+message.home.search = Search...
+message.home.empty = Nothing to see here!
+message.home.toAddPost = click on a '+' button to add posts
+message.home.likes = Likes
+message.home.allComments = View
+message.home.restComments = comments
