Width & number of number of image in a column changed

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,3 +10,11 @@ message.login.badCredentials= Username and/or password is incorrect!
 message.login.passwordConfirm = Confirm password
 message.login.username = username
 message.comment.description = Comment
+message.profile.fullName = Full Name
+message.profile.bio = Bio
+message.profile.birhtday = Birth day
+message.profile.gender = Gender
+message.profile.gender.MALE = Male
+message.profile.gender.FEMALE = Female
+message.profile.gender.OTHER = Other
+message.profile.photo = Photo
