--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,3 +10,6 @@ message.login.badCredentials= Username and/or password is incorrect!
 message.login.passwordConfirm = Confirm password
 message.login.username = username
 message.comment.description = Comment
+
+message.post.title = Post Title
+message.post.description = Description
