--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,3 +33,12 @@ message.profile.gender.MALE = Male
 message.profile.gender.FEMALE = Female
 message.profile.gender.OTHER = Other
 message.profile.photo = Photo
+message.profile.updateprofile = Update My Profile
+message.profile.following = Following
+message.profile.follow = Follow
+message.profile.editprofile = Edit Profile
+message.profile.username = User Name
+message.address.country = Country
+message.address.city = City
+message.address.state = State
+message.address.zipcode = Zipcode
