--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,6 +14,13 @@ message.comment.description = Comment
 message.post.title = Post Title
 message.post.description = Description
 
+message.ads.text = Create Advertisement Window
+message.ads.title = Title
+message.ads.description = Description
+message.ads.advertisementUrl = Advertisement Url
+message.ads.targetAgeMin = Target Age Min
+message.ads.targetAgeMax = Target Age Max
+
 message.home.newPost = new post
 message.home.posts = POSTS
 message.home.followers = FOLLOWERS
