--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -49,3 +49,5 @@ message.address.country = Country
 message.address.city = City
 message.address.state = State
 message.address.zipcode = Zipcode
+
+message.admin.postlisttitle = Post List By Paging
