--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,6 +32,7 @@ message.home.toAddPost = click on a '+' button to add posts
 message.home.likes = Likes
 message.home.allComments = View
 message.home.restComments = comments
+
 message.profile.fullName = Full Name
 message.profile.bio = Bio
 message.profile.birhtday = Birth day
@@ -39,6 +40,7 @@ message.profile.gender = Gender
 message.profile.gender.MALE = Male
 message.profile.gender.FEMALE = Female
 message.profile.gender.OTHER = Other
+message.profile.email = Email
 message.profile.photo = Photo
 message.profile.updateprofile = Update My Profile
 message.profile.following = Following
@@ -49,3 +51,5 @@ message.address.country = Country
 message.address.city = City
 message.address.state = State
 message.address.zipcode = Zipcode
+message.result.UPDATED = Successfully updated.
+
