Pagination before Internationalization

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -50,4 +50,15 @@ message.address.city = City
 message.address.state = State
 message.address.zipcode = Zipcode
 
-message.admin.postlisttitle = Post List By Paging
+
+
+message.admin.home = Home
+message.admin.user = User
+message.admin.post = Post
+message.admin.ads = Advertisements
+message.admin.total = Total
+message.admin.postListTitle = Post List
+message.admin.userListTitle = User List
+message.admin.commentListTitle = Comment List
+
+
