--- a/src/main/resources/messages_mn.properties
+++ b/src/main/resources/messages_mn.properties
@@ -22,3 +22,12 @@ message.home.toAddPost = Баруун дээд '+' товч дээр дарна 
 message.home.likes = хүнд таалагдсан
 message.home.allComments = Бүх
 message.home.restComments = сэтгэгдэлийг харах
+
+message.admin.home = Нүүр хуудас
+message.admin.user = Хэрэглэгч
+message.admin.post = Пост
+message.admin.ads = Зарлал
+message.admin.total = Нийт
+message.admin.postListTitle = Постын жагсаалт
+message.admin.userListTitle = Хэрэглэгчийн жагсаалт
+message.admin.commentListTitle = Сэтгэгдэл жагсаалт
