--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,6 +13,7 @@ message.comment.description = Comment
 
 message.post.title = Post Title
 message.post.description = Description
+message.post.checkbox = Notify followers
 
 message.ads.text = Create Advertisement Window
 message.ads.title = Title
