--- a/src/main/resources/errorMessages_mn.properties
+++ b/src/main/resources/errorMessages_mn.properties
@@ -1,3 +1,11 @@
 errorMsg.passwordConfirm = Нүүц үг давхцахгүй байна
 errorMsg.emailExists = Бүртгэлтэй э-майл байна
 errorMsg.usernameExists = Хэрэглэгчийн нэр бүртгэлтэй байна
+
+errorMsg.post.title = "Гарчиг дутуу байна"
+errorMsg.post.description = "Тайлбар дутуу байна"
+
+errorMsg.ads.advertisementUrl = "Зар сурталчилгааны хаяг дутуу байна"
+errorMsg.ads.targetAgeMin = "Насны доод хязгаар дутуу байна"
+errorMsg.ads.targetAgeMax = "Насны дээд хязгаар дутуу байна"
+errorMsg.ads.gender = "Хүйс сонгоогүй байна"
