--- a/src/main/resources/messages_mn.properties
+++ b/src/main/resources/messages_mn.properties
@@ -11,6 +11,18 @@ message.login.passwordConfirm = Нууц үг баталгаажуулах
 message.login.username = Хэрэглэгчийн нэр
 message.comment.description = Сэтгэгдэл
 
+message.post.title = Post-ийн Гарчиг 
+message.post.description = Тайлбар
+message.post.checkbox = Дагагчийг мэдэгдэх
+message.post.submit = Илгээх
+
+message.ads.text = Зар үүсгэх цонх
+message.ads.title = Гарчиг
+message.ads.description = Тайлбар
+message.ads.advertisementUrl = Зарын Url
+message.ads.targetAgeMin = Зорилтод доод нас
+message.ads.targetAgeMax = Зорилтод дээд нас
+
 message.home.newPost = шинэ пост
 message.home.posts = ПОСТ
 message.home.followers = Дагуулууд
