--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,6 +14,7 @@ message.comment.description = Comment
 message.post.title = Post Title
 message.post.description = Description
 message.post.checkbox = Notify followers
+message.post.submit = Submit
 
 message.ads.text = Create Advertisement Window
 message.ads.title = Title
