--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -54,15 +54,56 @@ message.address.zipcode = Zipcode
 message.result.UPDATED = Successfully updated.
 
 
-
+message.admin.panel = Admin Panel
+message.admin.menu = Menu
+message.admin.signed = You signed as Admin
 message.admin.home = Home
 message.admin.user = User
 message.admin.post = Post
-message.admin.ads = Advertisements
+message.admin.ads = Advertisement
+message.admin.comment = Comment
 message.admin.total = Total
 message.admin.postListTitle = Post List
 message.admin.userListTitle = User List
 message.admin.commentListTitle = Comment List
+message.admin.userId = User Id
+message.admin.userName = User Name
+message.admin.role = Role
+message.admin.date = Created
+message.admin.follower = Follower
+message.admin.following = Following
+message.admin.postCount = Post Count
+message.admin.status = Status
+message.admin.action = Action
+message.admin.prev = Previous
+message.admin.next = Next
+message.admin.postId = Post Id
+message.admin.title = Title
+message.admin.commentCount = Comment Count
+message.admin.health = Unhealthy
+message.admin.addAds = Add ads
+message.admin.adsId = Ads Id
+message.admin.url = URL
+message.admin.age = Target Age
+message.admin.country = Target Country
+message.admin.gender = Target Gender
+message.admin.min = MIN
+message.admin.max = MAX
+message.admin.commentId = Comment Id
+message.admin.userInfo = User Information
+message.admin.postInfo = Post Information
+message.admin.commentInfo = Comment Information
+message.admin.photo = Photo
+message.admin.description = Description
+
+
+
+
+
+
+
+
+
 
 
 
