--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -57,9 +57,9 @@ message.result.UPDATED = Successfully updated.
 
 
 message.admin.panel = Admin Panel
-message.admin.menu = Menu
+message.admin.menu = Home Page
 message.admin.signed = You signed as Admin
-message.admin.home = Home
+message.admin.home = Dashboard
 message.admin.user = User
 message.admin.post = Post
 message.admin.ads = Advertisement
@@ -97,6 +97,11 @@ message.admin.postInfo = Post Information
 message.admin.commentInfo = Comment Information
 message.admin.photo = Photo
 message.admin.description = Description
+message.admin.view = View
+message.admin.active = Active/Deactivate
+message.admin.enable = Enable/Disable
+
+
 
 
 
