--- a/src/main/resources/messages_mn.properties
+++ b/src/main/resources/messages_mn.properties
@@ -10,8 +10,7 @@ message.login.badCredentials= Хэрэглэгчийн нэр/нууц үг бу
 message.login.passwordConfirm = Нууц үг баталгаажуулах
 message.login.username = Хэрэглэгчийн нэр
 message.comment.description = Сэтгэгдэл
-
-message.post.title = Post-ийн Гарчиг 
+message.post.title=Постын Гарчиг 
 message.post.description = Тайлбар
 message.post.checkbox = Дагагчийг мэдэгдэх
 message.post.submit = Илгээх
@@ -34,11 +33,25 @@ message.home.toAddPost = Баруун дээд '+' товч дээр дарна 
 message.home.likes = хүнд таалагдсан
 message.home.allComments = Бүх
 message.home.restComments = сэтгэгдэлийг харах
-
+message.profile.fullName=Бүтэн нэр
+message.profile.bio=Био
+message.profile.birhtday=Төрсөн өдөр
+message.profile.gender=Хүйс
+message.profile.gender.MALE=Эрэгтэй
+message.profile.gender.FEMALE=Эмэгтэй
+message.profile.gender.OTHER=Бусад
+message.profile.email=е-майл
+message.profile.photo=Зураг
+message.profile.updateprofile=
+message.profile.following=Дагасан
+message.profile.follow=Дагах
+message.profile.editprofile=Профайл засах
+message.profile.username=Хэрэглэгчийн Нэр
+message.result.UPDATED=Амжилттай хадгалагдлаа.
 message.admin.panel = Админ
-message.admin.menu = Үндсэн цэс
+message.admin.menu = Нүүр хуудас
 message.admin.signed = Та Админаар нэвтэрсэн байна
-message.admin.home = Нүүр хуудас
+message.admin.home = Админ дэлгэц
 message.admin.user = Хэрэглэгч
 message.admin.post = Пост
 message.admin.ads = Зарлал
@@ -64,8 +77,8 @@ message.admin.commentCount = Сэтгэгдэл тоо
 message.admin.health = Хориотой
 message.admin.addAds = Зар нэмэх
 message.admin.adsId = Зарын дугаар
-message.admin.url = URL
-message.admin.age = Нас
+message.admin.url=Вэб хаяг
+message.admin.age=Зорилт Нас
 message.admin.country = Улс
 message.admin.gender = Хүйс
 message.admin.min = доод
@@ -76,3 +89,6 @@ message.admin.postInfo = Пост Мэдээлэл
 message.admin.commentInfo = Сэтгэгдэл Мэдээлэл
 message.admin.photo = Зураг
 message.admin.description = Дэлгэрэнгүй
+message.admin.view = Харах
+message.admin.active=Идэвхитэй/Идэвхигүй
+message.admin.enable=Идэвхитэй/Идэвхигүй
