Login success handler.redirect different page for user and admin.

--- a/src/main/resources/messages_mn.properties
+++ b/src/main/resources/messages_mn.properties
@@ -26,7 +26,7 @@ message.home.newPost = шинэ пост
 message.home.posts = ПОСТ
 message.home.followers = Дагуулууд
 message.home.following = Дагагч
-message.home.logout = гарах
+message.home.logout = Гарах
 message.home.search = Хайх...
 message.home.empty = Энд хараад байх юм байхгүй ээ!
 message.home.toAddPost = Баруун дээд '+' товч дээр дарна уу.
